# rbm-core

./: .gitmodules  CMakeLists.txt  Makefile
algebra/: CMakeLists.txt
algebra/include/math/algebra/: dfunction.h  manifold.h  manifold_common.h
algebra/test/: dfunction.cpp
cmake/: mboxConfig.cmake.in
diff/: CMakeLists.txt
diff/example/: dfunction.cpp
diff/include/mathbox/diff/: dfunction.h  manifold.h  manifold_common.h
diff/include/mbox/diff/: manifold.h
diff/include/owl/diff/: dfunction.h  manifold_common.h
geometry/: CMakeLists.txt
geometry/example/: collision.cpp  collision_primitives.cpp
geometry/include/math/geometry/: bounding.h  bvh.h  collision.h  collision_mesh.h  facet.h  grid.h  height_map.h  height_map_conversions.h  height_map_functional.h  height_map_grid.h  json.h  mesh.h  mesh_conversions.h  primitive.h  primitive_collisions.h  primitive_conversions.h  vertex.h  visual_mesh.h
geometry/include/mathbox/geometry/: bounding.h  bvh.h  collision.h  collision_mesh.h  datapack.h  facet.h  grid.h  height_map.h  height_map_conversions.h  height_map_functional.h  height_map_grid.h  mesh.h  mesh_conversions.h  primitive.h  primitive_collisions.h  primitive_conversions.h  serialize.h  vertex.h  visual_mesh.h
geometry/include/mbox/geometry/: datapack.h  mesh.h
geometry/include/owl/geometry/: bvh.h  collision_mesh.h  facet.h  height_map.h  height_map_conversions.h  height_map_functional.h  primitive_collisions.h  primitive_conversions.h  vertex.h  visual_mesh.h
geometry/src/: height_map_conversions.cpp  height_map_functional.cpp  height_map_grid.cpp
geometry/test/: height_map.cpp
geometry/unused/: kdtree.h  point_cloud.h  polygon_list.h  topology.h
mechanics/: CMakeLists.txt
mechanics/example/: main.cpp
mechanics/include/math/mechanics/: gravity.h  inertia.h  kinematics.h  mobile.h
mechanics/include/mathbox/mechanics/: gravity.h  inertia.h  kinematics.h  mobile.h
mechanics/include/owl/mechanics/: gravity.h  kinematics.h  mobile.h
mechanics/test/: main.cpp
opt/: CMakeLists.txt
opt/example/: main.cpp
opt/include/math/opt/: interior_point.h  lagrangian.h  least_squares.h  solve.h  unconstrained.h
opt/include/mathbox/opt/: interior_point.h  least_squares.h  solve.h  unconstrained.h
opt/include/owl/opt/: interior_point.h  unconstrained.h
opt/test/: main.cpp
probability/: CMakeLists.txt
probability/example/: main.cpp
probability/include/math/probability/: distribution.h  gaussian.h  process.h
probability/include/mathbox/probability/: distribution.h  gaussian.h  process.h
probability/include/mbox/probability/: process.h
probability/include/owl/probability/: distribution.h  gaussian.h
probability/test/: main.cpp
rbm-cpp/: CMakeLists.txt
rbm-cpp/include/rbm/cpp/: annotated_enum.h  annotated_variant.h  circular_buffer.h  cloneable.h  darray.h  flag_helpers.h  optional_tuple.h
rbm-cpp/test/: optional_tuple.cpp
rbm-diff/: CMakeLists.txt
rbm-diff/example/: dfunction.cpp
rbm-diff/include/rbm/diff/: dfunction.h  manifold.h  manifold_common.h
rbm-geometry/: CMakeLists.txt
rbm-geometry/example/: collision_primitives.cpp
rbm-geometry/include/rbm/geometry/: bounding.h  bvh.h  collision.h  collision_mesh.h  datapack.h  facet.h  grid.h  height_map.h  height_map_conversions.h  height_map_functional.h  height_map_grid.h  mesh.h  mesh_conversions.h  primitive.h  primitive_collisions.h  primitive_conversions.h  vertex.h  visual_mesh.h
rbm-geometry/src/: height_map_conversions.cpp  height_map_functional.cpp  height_map_grid.cpp
rbm-gui/: .gitignore  CMakeLists.txt  gen_shader_h.sh
rbm-gui/example/: viewport.cpp  window.cpp
rbm-gui/include/rbm/gui/: camera.h  camera_controller.h  entity.h  font.h  grid.h  grid_renderer.h  marker_renderer.h  mesh.h  mesh_entity.h  mesh_renderer.h  renderer.h  shader.h  viewport.h  widget.h  window.h
rbm-gui/src/: camera.cpp  camera_controller.cpp  font.cpp  grid_renderer.cpp  marker_renderer.cpp  mesh_renderer.cpp  shader.cpp  viewport.cpp  window.cpp
rbm-mechanics/: CMakeLists.txt
rbm-mechanics/example/: main.cpp
rbm-mechanics/include/rbm/mechanics/: gravity.h  inertia.h  kinematics.h  mobile.h
rbm-opt/: CMakeLists.txt
rbm-opt/example/: main.cpp
rbm-opt/include/rbm/opt/: interior_point.h  least_squares.h  solve.h  unconstrained.h
rbm-probability/: CMakeLists.txt
rbm-probability/example/: main.cpp
rbm-probability/include/rbm/probability/: distribution.h  gaussian.h  process.h
rbm-transform/: CMakeLists.txt
rbm-transform/benchmark/: transform3.cpp
rbm-transform/include/rbm/transform/: adjoint.h  angle.h  cross_product_matrix.h  datapack.h  euler.h  group_dimensions.h  homogeneous.h  io.h  miscellaneous.h  radians.h  rotation.h  screw_transform.h  transform.h
rbm-transform/test/: angle.cpp  datapack.cpp  transform2.cpp  transform3.cpp
rbm-types/: CMakeLists.txt
rbm-types/include/rbm/types/: color.h  datapack.h  interval.h  matrix.h  (+1 more)
scripts/: build  install  test
transform/: CMakeLists.txt
transform/benchmark/: transform3.cpp
transform/include/math/transform/: adjoint.h  angle.h  cross_product_matrix.h  euler.h  group_dimensions.h  homogeneous.h  io.h  json.h  miscellaneous.h  radians.h  rotation.h  screw_transform.h  transform.h
transform/include/mathbox/transform/: adjoint.h  angle.h  cross_product_matrix.h  datapack.h  euler.h  group_dimensions.h  homogeneous.h  io.h  miscellaneous.h  radians.h  rotation.h  screw_transform.h  serialize.h  transform.h
transform/include/mbox/transform/: euler.h  miscellaneous.h  transform.h
transform/include/owl/transform/: angle.h  cross_product_matrix.h  euler.h  group_dimensions.h  homogeneous.h  transform.h
transform/test/: angle.cpp  datapack.cpp  main.cpp  serialize.cpp  transform2.cpp  transform3.cpp
types/: CMakeLists.txt
types/include/math/types/: color.h  interval.h  matrix.h  mtensor.h  serialize.h
types/include/mathbox/types/: datapack.h  interval.h  matrix.h  mtensor.h  serialize.h
types/include/mbox/types/: color.h
types/include/owl/types/: color.h  mtensor.h  serialize.h
